tests/paczka1/fuzzy1/21081255.err
Error in line 3: J4uW9f6cf A755 81,8
Error in line 11: J4uW9f6cf A51 110,9
Error in line 28: A755 A51 12,8
Error in line 33: lKjgHDxq61K A755 29,5
